Added Alan Connelly to list of authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -47,3 +47,9 @@
 - name: Jelle Veraart
   nickname: Jelle
   github: jelleveraart
+
+- name: Alan Connelly
+  nickname: Alan
+  github: alan-connelly
+  website: https://www.florey.edu.au/advanced-mri-development-group
+  discourse: alan-connelly
