Make sure Thijs' discourse handle was correctly listed

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,7 +21,7 @@
   github: thijsdhollander
   twitter: ThijsDhollander
   website: https://www.researchgate.net/profile/Thijs_Dhollander
-  discourse: Thijs
+  discourse: ThijsDhollander
 
 - name: Ben Jeurissen
   nickname: Ben
