Affiliations: Add National Imaging Facility (NIF)

--- a/_data/frontpage/affiliations.yml
+++ b/_data/frontpage/affiliations.yml
@@ -6,6 +6,10 @@
   logo: images/affiliations/unimelb.png
   link: http://www.unimelb.edu.au/
 
+- name: National Imaging Facility
+  logo: images/affiliations/nif.png
+  link: http://anif.org.au/
+
 - name: King's College London
   logo: images/affiliations/kcl.png
   link: http://www.kcl.ac.uk/
