Affiliations: All images to precisely 300px

--- a/_data/frontpage/affiliations.yml
+++ b/_data/frontpage/affiliations.yml
@@ -15,7 +15,7 @@
   link: http://www.kcl.ac.uk/
 
 - name: University of Antwerp
-  logo: images/affiliations/uni_antwerp.jpeg
+  logo: images/affiliations/uantwerp.png
   link: https://www.uantwerpen.be/en/
 
 - name: VisionLab
