--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@
   link: /blog/
 
 - title: Videos
-  link: /videos/
+  link: /videos.html
 
 - title: Documentation
   link: http://userdocs.mrtrix.org/
