--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ url: "http://www.mrtrix.org" # the base hostname & protocol for your site
 permalink: pretty
 author: "The MRtrix3 Team"
 title_image: "images/404/brain.png"
+description: Advanced tools for the analysis of diffusion MRI data
 
 # Build settings
 markdown: kramdown
