Improve description field for Twitter cards with author name

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,6 +17,12 @@
   twitter: Lestropie
   discourse: rsmith
 
+- name: Rami Tabarra
+  nickname: Rami
+  github: rtabbara
+  twitter: tabbara_rami
+  discourse: rtabbara
+
 - name: Thijs Dhollander
   nickname: Thijs
   github: thijsdhollander
