--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: MRtrix3
 baseurl: "" # the subpath of your site, e.g. /blog
-#url: "http://www.mrtrix.org" # the base hostname & protocol for your site
+url: "https://jdtournier.github.io/MRtrix3.github.io" # the base hostname & protocol for your site
 permalink: pretty
 author: "The MRtrix3 Team"
 title_image: "/images/404/brain.png"
