--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title: MRtrix3
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jdtournier.github.io/MRtrix3.github.io" # the base hostname & protocol for your site
+baseurl: "MRtrix3.github.io" # the subpath of your site, e.g. /blog
+url: "https://jdtournier.github.io" # the base hostname & protocol for your site
 permalink: pretty
 author: "The MRtrix3 Team"
 title_image: "/images/404/brain.png"
