--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: MRtrix3
-baseurl: "MRtrix3.github.io" # the subpath of your site, e.g. /blog
+baseurl: "/MRtrix3.github.io" # the subpath of your site, e.g. /blog
 url: "https://jdtournier.github.io" # the base hostname & protocol for your site
 permalink: pretty
 author: "The MRtrix3 Team"
