fix iFOD2 abstract URL

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -186,7 +186,7 @@
    year: 2010
    authors: "Tournier, J.-D.; Calamante, F. & Connelly, A."
    internal: True
-   url: "http://cds.ismrm.org/protected/10MProceedings/files/1670_4298.pdf"
+   url: "https://cds.ismrm.org/protected/10MProceedings/PDFfiles/1670_4298.pdf"
 
 -  title: "Probabilistic fibre tracking: Differentiation of connections from chance events"
    journal: "NeuroImage, 2008, 42, 1329-1339"
