moved video to documention page, added link via button to front page

--- a/_data/frontpage/banner.yml
+++ b/_data/frontpage/banner.yml
@@ -4,3 +4,7 @@ buttons:
     - title: Download
       icon: fa fa-download
       link: /download
+
+    - title: Use MRtrix3
+      icon: fa fa-users
+      link: /documentation
