--- a/_data/frontpage/banner.yml
+++ b/_data/frontpage/banner.yml
@@ -6,5 +6,5 @@ buttons:
       link: /download
 
     - title: Use MRtrix3
-      icon: fa fa-users
+      icon: fa fa-cogs
       link: /documentation
