add link to documentation for external modules

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -25,5 +25,9 @@
       link: /developer-documentation/
       new_window: true
 
+    - title: Writing external modules
+      link: /external-modules
+      new_window: true
+
 - title: Publications
   link: /publications/
