workshop: redirect to Edinburgh, add to menu, remove ISMRM demo from menu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,5 +1,5 @@
-- title: ISMRM demo
-  link: /ismrm_demo_2021/
+- title: workshop 2022 Edinburgh
+  link: /workshop/
 
 - title: Download
   link: /download/
